--- a/AyoMakan/app/src/main/AndroidManifest.xml
+++ b/AyoMakan/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".MainActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
